added thanks el

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello Guys</h1>
     <h1>Wellcome to this application</h1>
+    <h1>Thanks for visited this application</h1>
 
 </body>
 </html>
